--- a/android/PromGameMobile/res/layout/promotion_activity.xml
+++ b/android/PromGameMobile/res/layout/promotion_activity.xml
@@ -6,22 +6,87 @@
     android:background="@color/light_gray" >
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/image_view"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:scaleType="fitCenter"
         android:contentDescription="Promotion_image"
         android:src="@drawable/abs__ab_bottom_solid_dark_holo" />
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/gap"
-        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam a lacus vel nisi dignissim lobortis. Nunc a magna vitae enim facilisis vestibulum quis condimentum tortor. Morbi non eros ante, sit amet tincidunt felis. Proin orci lectus, sollicitudin vitae fermentum in, faucibus fermentum massa. Proin at leo felis." />
+        android:orientation="vertical"
+        android:padding="@dimen/gap" >
+
+        <TextView
+            android:id="@+id/name_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/gap"
+            android:layout_marginBottom="@dimen/gap"
+            android:text="Name"
+            android:textStyle="bold"
+            android:textSize="22sp" />
+
+        <TextView
+            android:id="@+id/description_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nibh diam, accumsan a eleifend eget, adipiscing vel eros. Proin in erat vitae lorem malesuada imperdiet. Nam eu mi sapien, sed blandit ligula. Donec luctus elit a purus viverra bibendum."
+            android:textSize="14sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/gap" >
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="End Date"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:layout_marginRight="@dimen/gap" />
+
+            <TextView
+                android:id="@+id/end_date_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="22-12-2013"
+                android:textSize="16sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/gap" >
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Win Points"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:layout_marginRight="@dimen/gap" />
+
+            <TextView
+                android:id="@+id/win_points_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="50000"
+                android:textSize="16sp" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/play_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
