--- a/android/PromGameMobile/res/layout/promotions_list_row.xml
+++ b/android/PromGameMobile/res/layout/promotions_list_row.xml
@@ -1,70 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="horizontal" >
+     >
 
-    <RelativeLayout
-        android:id="@+id/leftSide"
-        android:layout_width="wrap_content"
+    <pt.techzebra.promgamemobile.staggeredgridview.ScaleImageView
+        android:id="@+id/imageView1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="handlePromSelected"
-        android:orientation="vertical" >
+        android:src="@null"
+        />
 
-        <ImageView
-            android:id="@+id/promo_image1"
-            android:layout_width="150dp"
-            android:layout_height="200dp"
-            android:layout_margin="6dp"
-            android:contentDescription="PromotionImage"
-            android:padding="5dp"
-             />
-
-        <TextView
-            android:id="@+id/description1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/promo_image1"
-            android:layout_alignLeft="@+id/promo_image1"
-            android:layout_alignRight="@+id/promo_image1"
-            android:layout_alignTop="@+id/promo_image1"
-            android:layout_margin="1dp"
-            android:gravity="bottom|right"
-            android:text="Promotion X"
-            android:textColor="@color/black"
-            android:textSize="20sp" >
-        </TextView>
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/rightSide"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="handlePromSelected"
-        android:orientation="vertical" >
+        android:layout_margin="1dp"
+        android:gravity="bottom"
+        android:text="@string/prom_sample"
+        android:textColor="@color/black"
+        android:textSize="20sp" />
 
-        <ImageView
-            android:id="@+id/promo_image2"
-            android:layout_width="150dp"
-            android:layout_height="200dp"
-            android:layout_margin="6dp"
-            android:contentDescription="PromotionImage"
-            android:padding="5dp" />
-
-        <TextView
-            android:id="@+id/description2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/promo_image2"
-            android:layout_alignLeft="@+id/promo_image2"
-            android:layout_alignRight="@+id/promo_image2"
-            android:layout_alignTop="@+id/promo_image2"
-            android:layout_margin="1dp"
-            android:gravity="right|bottom"
-            android:text="Promotion X"
-            android:textColor="@color/black"
-            android:textSize="20sp" >
-        </TextView>
-    </RelativeLayout>
-
-</LinearLayout>
+</FrameLayout>
