--- a/android/PromGameMobile/res/values/dimens.xml
+++ b/android/PromGameMobile/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="button_primary_text_size">14sp</dimen>
     <dimen name="gap2">20dp</dimen>
     <dimen name="gap3">30dp</dimen>
+    <dimen name="promotions_list_margin">10dp</dimen>
 </resources>
